# tsi

./: .dockerignore  .gitignore  .gitlab-ci.yml  BOOTSTRAP.md  INSTALL.md  INTELLIGENT-INSTALLER.md  LICENSE  Makefile  README.md  bootstrap-c.sh  bootstrap-default.sh  bootstrap-minimal.sh  bootstrap.sh  install-oneline.sh  install.py  install.sh  local-install.sh  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py  tsi-bootstrap.sh
.devcontainer/: Dockerfile  devcontainer.json
completions/: README.md  tsi.bash  tsi.zsh
docker/: Dockerfile.alpine-c-only  Dockerfile.alpine-minimal  Dockerfile.alpine-with-build-tools  Dockerfile.alpine-with-python  Dockerfile.ubuntu-minimal  Dockerfile.ubuntu-with-build-tools  Dockerfile.ubuntu-with-python  README.md  docker-compose.yml  run-tests.sh  test-install-c.sh  test-install.sh
docs/: BOOTSTRAP-OPTIONS.md  DEPLOYMENT.md  MAINTENANCE.md  README.md  TRIGGER-WORKFLOW.md  VERSION-DISCOVERY.md  WORKFLOW-AUTOMATION.md  WORKFLOW-PERMISSIONS.md  example-tsi.json  index.md
scripts/: deps_check.sh  discover-versions.py  merge-external-package.py  tsi_installer.sh  validate-package-versions.py
src/: Makefile  README.md  builder-output.c  builder.c  builder.h  config.c  config.h  database.c  database.h  fetcher.c  fetcher.h  log.c  log.h  main.c  package.c  package.h  resolver.c  resolver.h  tui.h  tui_interactive.c  tui_interactive.h  tui_style.c  tui_style.h
tests/: README.md  TESTING.md
tsi/: __init__.py  builder.py  cli.py  config.py  database.py  fetcher.py  manager.py  package.py  repository.py  (+1 more)
(+25 files in other folders)
